Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/patterns/UncheckedWarningOnMatchesTest.out
UncheckedWarningOnMatchesTest.java:14:13: compiler.err.instanceof.reifiable.not.safe: java.lang.Object, java.util.ArrayList<java.lang.Integer>
1 error
